[JC] Added Actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,18 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+# This file will confirm your configuration is running correctly
+# It will spin up a docker container and execute the commands you supply
+# !! Please create your own branch to test this out, don't push to main !!
+
+name: Hello World!
+on: workflow_dispatch
 jobs:
-  Explore-GitHub-Actions:
+  say-hello:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: Say Hello World
+        run: echo "Hello World, I'm running!"
+
+  say-hi:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Say Hi!
+        run: echo "Hi World, I'm running!"
