--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -32,3 +32,4 @@ jobs:
             github_token: ${{ secrets.GITHUB_TOKEN }}
             publish_dir: ./deployments
             publish_branch: gh-pages
+            keep_files: true
