--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -9,7 +9,7 @@ jobs:
             run: bash ./.github/scripts/hello.sh
           
           - name: Show GITHUB_HEAD_REF
-            run: echo ${{.github.head_ref }}
+            run: echo ${{ github.head_ref }}
           
           - name: Show GITHUB_REF
             run: echo ${{ github.ref }}
